# vipcare

./: .gitignore  .npmignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
.harness/: evaluation-wave-1.md  evaluation-wave-2.md  evaluation-wave-3.md  evaluation-wave-4.md  handoff-wave-1.md  handoff-wave-3.md
lib/: card.js  config.js  monitor.js  profile.js  resolver.js  scheduler.js  synthesizer.js  templates.js
lib/fetchers/: search.js  twitter.js  web.js  youtube.js
profiles/: sam-altman.md
skill/: vip.md
src/vip/: __init__.py  cli.py  config.py  monitor.py  profile.py  resolver.py  scheduler.py  synthesizer.py  templates.py
src/vip/fetchers/: search.py  twitter.py  web.py
tests/: card.test.js  cli.test.js  config.test.js  conftest.py  fetchers.test.js  monitor.test.js  profile.test.js  resolver.test.js  scheduler.test.js  search.test.js  synthesizer.test.js  test_cli.py  test_fetchers.py  test_monitor.py  test_profile.py  test_resolver.py  test_scheduler.py  test_synthesizer.py  youtube.test.js
web/: index.html
