[project]
name = "vip-crm"
version = "0.1.0"
description = "Auto-build VIP person profiles from Twitter/LinkedIn public data"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "ddgs>=9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
vip = "vip.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
